--- a/frontend/src/LandingPage/LandingPage.css
+++ b/frontend/src/LandingPage/LandingPage.css
@@ -16,7 +16,7 @@
 .headline-container {
   text-align: center;
   transition: opacity 0.5s ease;
-  padding-top: 10px;
+  padding-top: 60px;
 }
 
 .headline {
